--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: '16'
       - name: Install gulp
         run: npm i -g gulp-cli
+      - name: Install dependencies
+        run: npm install
       - name: build template
         run: gulp build
       - name: Create Release
