gnah used build instead of bundle for gulp

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install gulp && dependencies
         run: npm i -g gulp-cli && npm i
       - name: build template
-        run: gulp build
+        run: gulp bundle
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
