--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,14 @@ jobs:
         run: npm i -g gulp-cli && npm i
       - name: build template
         run: gulp bundle
+      - name: Remove develop release
+        uses: dev-drprasad/delete-tag-and-release@v0.2.0
+        with:
+          tag_name: develop #(required) tag name to delete
+          delete_release: true #(optional) default: true
+          # repo: <owner>/<repoName> #(optional) target repository. default: repo running this action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -27,13 +35,6 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: true
-      - uses: dev-drprasad/delete-tag-and-release@v0.2.0
-        with:
-          tag_name: develop #(required) tag name to delete
-          delete_release: true #(optional) default: true
-          # repo: <owner>/<repoName> #(optional) target repository. default: repo running this action
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
